--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
-    <link rel="stylesheet" href="bgcalc.css">
+    <link rel="stylesheet" href="css/bgcalc.css">
   
 
   <meta name="viewport" content="initial-scale=1" />
@@ -29,7 +29,7 @@
             
             <md-input-container>
               <label>Stock Ticker</label>
-              <input type="text" ng-model="ben.ticker" name="ticker" required>
+              <input type="text" ng-model="ben.ticker" name="ticker" ng-maxlength="4" required>
             </md-input-container>
             <div>
                 <md-button class="md-raised md-primary" ng-click="getCompanyData()" ng-disabled="benForm.ticker.$invalid">Go</md-button>
@@ -176,7 +176,7 @@
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
 <script src="bower_components/angular-material/angular-material.min.js"></script>
 
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 
 </body>
 </html>
