--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -14,6 +14,9 @@
 	            <div>
 	                <md-button class="md-raised md-primary" ng-click="getCompanyData()" ng-disabled="benForm.ticker.$invalid">Go</md-button>
 	            </div>
+	            <div>
+	            	<md-button class="md-raised md-primary" ui-sref="index.login">Login</md-button>
+	            </div>
 	        </div>
 	    </ng-form>
 
