--- a/views/index.html
+++ b/views/index.html
@@ -34,6 +34,7 @@
 
 <script src="js/app.js"></script>
 <script src="js/main-controller.js"></script>
+<script src="js/login-controller.js"></script>
 
 </body>
 </html>
