--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -15,7 +15,10 @@
 	                <md-button class="md-raised md-primary" ng-click="getCompanyData()" ng-disabled="benForm.ticker.$invalid">Go</md-button>
 	            </div>
 	            <div>
-	            	<md-button class="md-raised md-primary" ui-sref="index.login">Login</md-button>
+	            	<md-button ng-show="!loggedIn" class="md-raised md-primary" ng-click="googleAuth()">Login with Google</md-button>
+	            	<div ng-show="loggedIn">
+	            		Welcome, {{user.displayName}}
+	            	</div>
 	            </div>
 	        </div>
 	    </ng-form>
