Add header and update login/logout

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
   ga('send', 'pageview');
     </script>
 </head>
-<body class="md-padding" style="font-family:Open sans;">
+<body style="font-family:Open sans;">
 
 <div ui-view="home"></div>
 
