--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -1,7 +1,7 @@
 <md-content>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <md-button aria-label="Go Back">
+        <md-button aria-label="Go Back" href="http://www.valuvesting.com">
           Go Back
         </md-button>
         <h2>
