--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -1,14 +1,11 @@
 <md-content>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <md-button aria-label="Go Back" href="http://www.valuvesting.com">
-          Go Back
-        </md-button>
         <h2>
-          <span>Valuvesting Calculator</span>
+          <span>Valuvesting</span>
         </h2>
         <span flex></span>
-    	<md-button ng-show="!loggedIn" class="md-raised" ng-click="googleAuth()">Login with Google</md-button>
+    	<md-button ng-show="!loggedIn" class="md-raised" ng-click="googleAuth()">Google Login</md-button>
     	<div ng-show="loggedIn">
     		{{user.displayName}}
     	</div>
