--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
 <script src="bower_components/angular-messages/angular-messages.min.js"></script>
 <script src="bower_components/angular-material/angular-material.min.js"></script>
 <script src="bower_components/firebase/firebase.js"></script>
-<script src="bower_components/angularfire/dist/angularfire.min.js"></script>
+<script src="bower_components/angularfire/dist/angularfire.js"></script>
 
 <script>
   // Initialize Firebase
