Adding some db stuff along with https changes

--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -7,7 +7,7 @@
         <span flex></span>
     	<md-button ng-show="!loggedIn" class="md-raised" ng-click="googleAuth()">Google Login</md-button>
     	<div ng-show="loggedIn">
-    		{{user.displayName}}
+    		{{user.name}}
     	</div>
     	<md-button ng-show="loggedIn" class="md-raised" ng-click="logout()">Logout</md-button>
       </div>
@@ -26,7 +26,7 @@
 					</div>
 	            </md-input-container>
 	            <div>
-	                <md-button class="md-raised md-primary" ng-click="getCompanyData()" ng-disabled="benForm.ticker.$invalid">Go</md-button>
+	                <md-button class="md-raised md-primary" ng-click="getCompanyData()">Go</md-button>
 	            </div>
 	            <div>
 
