--- a/views/index.html
+++ b/views/index.html
@@ -44,10 +44,10 @@
   firebase.initializeApp(config);
 </script>
 
-<script src="js/app.js"></script>
-<script src="js/user-service.js"></script>
-<script src="js/main-controller.js"></script>
-<script src="js/sp-directive.js"></script>
+<script src="src/app.js"></script>
+<script src="src/services/calculation-service.js"></script>
+<script src="src/directives/sp-directive.js"></script>
+<script src="src/main-controller.js"></script>
 
 </body>
 </html>
