--- a/views/index.html
+++ b/views/index.html
@@ -2,6 +2,7 @@
 <html lang="en" ng-app="wsi">
 <head>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.min.css">
     <link rel="stylesheet" href="css/bgcalc.css">
   
